--- a/DataStructures/DataStructures.csproj
+++ b/DataStructures/DataStructures.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KdTree.cs" />
     <Compile Include="LinkedList.cs" />
     <Compile Include="HashTable.cs" />
     <Compile Include="BinaryTree.cs" />
